# pga-digest-cli

./: .env.example  .gitignore  README.md  config.toml  pyproject.toml
.github/workflows/: digest.yml
src/pga_digest/: cli.py  config.py  datagolf_api.py  emailer.py  feeds.py  narrator.py  news_search.py
